gccida/c1/pushlevel
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushlevel/src/c-decl.c:1387:23: error: expected identifier or '('
 struct binding_level = free_binding_level; 
                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushlevel/src/c-decl.c:1391:2: error: expected expression
 struct binding_level = make_binding_level( ); 
 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushlevel/src/c-decl.c:1392:12: error: expected expression
*( _OWORD *)&binding_level->parm_flag = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushlevel/src/c-decl.c:1392:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&binding_level->parm_flag = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushlevel/src/c-decl.c:1393:12: error: expected expression
*( _OWORD *)&binding_level->this_block = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushlevel/src/c-decl.c:1393:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&binding_level->this_block = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushlevel/src/c-decl.c:1394:12: error: expected expression
*( _OWORD *)&binding_level->shadowed = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushlevel/src/c-decl.c:1394:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&binding_level->shadowed = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushlevel/src/c-decl.c:1395:12: error: expected expression
*( _OWORD *)&binding_level->names = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushlevel/src/c-decl.c:1395:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&binding_level->names = 0LL; 
   ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pushlevel/src/obj/c-decl.o] Error 1
